objects/CompaniesOffice__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Companies Office credentials</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <label>Companies Office</label>
</CustomObject>